force-app/main/default/objects/Consultant__c/fields/Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Number__c</fullName>
    <label>Adhar Number</label>
    <length>18</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>