force-app/main/default/objects/Consultant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hyd</fullName>
            </value>
            <value>
                <fullName>Vij</fullName>
            </value>
            <value>
                <fullName>Ban</fullName>
            </value>
            <value>
                <fullName>Che</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>