force-app/main/default/objects/Consultant__c/fields/Contact_OTP__c.field-meta.xml
<CustomField>
    <fullName>Contact_OTP__c</fullName>
    <label>Contact OTP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>