force-app/main/default/objects/Consultant__c/fields/Industry_Salary__c.field-meta.xml
<CustomField>
    <fullName>Industry_Salary__c</fullName>
    <formula>IF( ISPICKVAL( Type__c , &quot;Experienced&quot;) ,  ROUND( Current_CTC__c *0.3,2) ,  300000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>