force-app/main/default/objects/Consultant__c/fields/Passout_Year__c.field-meta.xml
<CustomField>
    <fullName>Passout_Year__c</fullName>
    <label>Passout Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>