force-app/main/default/objects/Consultant__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>MTech</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>