force-app/main/default/objects/Consultant__c/fields/Relocate__c.field-meta.xml
<CustomField>
    <fullName>Relocate__c</fullName>
    <label>Relocate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>