force-app/main/default/objects/Consultant__c/fields/System_OPT__c.field-meta.xml
<CustomField>
    <fullName>System_OPT__c</fullName>
    <label>System OPT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>