force-app/main/default/objects/Consultant__c/fields/Univercity__c.field-meta.xml
<CustomField>
    <fullName>Univercity__c</fullName>
    <label>Univercity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JNTUK</fullName>
            </value>
            <value>
                <fullName>JNTUH</fullName>
            </value>
            <value>
                <fullName>ANU</fullName>
            </value>
            <value>
                <fullName>OU</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>