force-app/main/default/objects/Consultant__c/validationRules/CTC_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>CTC_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  Current_CTC__c  &gt; 200000,
        ISBLANK( Pan_Number__c )
)</errorConditionFormula>
    <errorMessage>Pan Number Can not be blank</errorMessage>
</ValidationRule>