force-app/main/default/objects/Consultant__c/validationRules/Exp_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(  Experience__c  &gt; 0,
   ISNULL( Current_CTC__c )
)</errorConditionFormula>
    <errorMessage>Current CTC can not blank</errorMessage>
</ValidationRule>